--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.queries.roles-query=select u.email, r.role_name from users u inner join auth_user_role ur on(u.id=ur.auth_user_id) inner join auth_role r on(ur.auth_role_id=r.auth_role_id) where u.email=?
+spring.quartz.auto-startup=true
+
+#security.basic.enabled=false
+#spring.queries.roles-query=select u.username, r.role_name from users u inner join auth_user_role ur on(u.id=ur.auth_user_id) inner join auth_role r on(ur.auth_role_id=r.auth_role_id) where u.username=?
